# prog2002_template

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODEOWNERS
CMake/Modules/: FindTCLAP.cmake
Docker/: Dockerfile  Dockerfile.build  Dockerfile.runtime  init_xvfb.sh  run.sh
Labs/: EnabledTests.txt
Labs/Lab00/: CMakeLists.txt  main.cpp
Labs/Lab01/: CMakeLists.txt  main.cpp
Labs/LabXX/: CMakeLists.txt
Labs/LabXX/src/: labxx.cpp  labxx.hpp  main.cpp
